--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
           video: {
                       mandatory: {
                           chromeMediaSource: 'desktop',
-                          chromeMediaSourceId: argShare,
-                          maxWidth: 1280,
-                          maxHeight: 720
+                          chromeMediaSourceId: argShare
                       },
                       optional: []
                   }
